hphp/hack/test/typecheck/ltgt.php.exp
File "ltgt.php", line 4, characters 10-11:
Do not use '<>', it performs type coercion. Use '!==' instead (Parsing[1002])
